--- a/Project19/Views/Account/AdminRegister.cshtml
+++ b/Project19/Views/Account/AdminRegister.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Project19.AuthContactApp.UserRegistration
 @{
+    ViewData["Title"] = "Регистрация";
     bool isSuccess = false;
     if(ViewBag.IsSuccess !=null)
     {
@@ -15,6 +16,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3 well">
+            <h3 class="text-center">Регистрация</h3>
+
             <form asp-action="AdminRegister" asp-antiforgery="true" class="form">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="col-xs-12">
