--- a/Project19/Views/Shared/Components/LogoutView/Default.cshtml
+++ b/Project19/Views/Shared/Components/LogoutView/Default.cshtml
@@ -1,18 +1,18 @@
-﻿<link href="~/css/bootstrap.css" rel="stylesheet" />
+﻿@using Project19.Controllers;
+@using Project19.Data;
 
-@if (User.Identity.IsAuthenticated)
+<link href="~/css/bootstrap.css" rel="stylesheet" />
+
+@if (AccountController.isAuth)
 {
-    @if(User.Identity !=null)
-    {
-        <div class="btn-group pull-right" style="width: 650px; font-size:20px;">
-            <a class="navbar-brand" href="~/">В начало</a>
-            <a class="navbar-brand" href="/MyDefault/AddContact">Добавить контакт</a>
-            <a class="navbar-brand" herf="#">@User.Identity.Name в системе</a>
-            <form method="post" asp-controller="Account" asp-action="Logout" id="logoutform" asp-antiforgery="true">
-                <a class="navbar-brand" href="#" onclick="document.getElementById('logoutform').submit()">Выход</a>
-            </form>
-        </div>
-    }
+    <div class="btn-group pull-right" style="width: 650px; font-size:20px;">
+        <a class="navbar-brand" href="~/">В начало</a>
+        <a class="navbar-brand" href="/MyDefault/AddContact">Добавить контакт</a>
+        <a class="navbar-brand" herf="#">@ContactDataApi.userNameValue в системе</a>
+        <form method="post" asp-controller="Account" asp-action="Logout" id="logoutform" asp-antiforgery="true">
+            <a class="navbar-brand" href="#" onclick="document.getElementById('logoutform').submit()">Выход</a>
+        </form>
+    </div>
 }
 else
 {
